--- a/Html/upcoming.html
+++ b/Html/upcoming.html
@@ -93,12 +93,7 @@
                 <li>17/2 - Aftersun</li>
             </ul>
     </main>
-    </section>
-    <aside>
-        <h2>
-            Möjligen att vi lägger någon typ info om något kul eller nåt i aside som på insperations biografen
-        </h2>
-    </aside>
+   
 
     <footer class="footer">
         <div class="footer-sections">
@@ -124,7 +119,7 @@
             <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
         </div>
     </footer>
-
+    <script src="./js/script.js"></script>
     <script src="../js/secNav/secNav.js" type="module"></script>
 </body>
 
