--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html">
           <img
             class="logotype"
-            src="/static/logo-cinema.png"
+            src="/LuleNorthernLightsCinema/static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
