--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="../static/hamburger-icon.svg"
+          src="/LuleNorthernLightsCinema/static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
 
       <nav>
         <ul class="main-nav">
-          <a href="/html/openingHours.html">
+          <a href="/LuleNorthernLightsCinema/html/openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="/html/about.html">
+          <a href="/LuleNorthernLightsCinema/html/about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="./html/ticket-info.html">
+          <a href="/LuleNorthernLightsCinema/html/ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href=".html/newsletter.html">
+          <a href="/LuleNorthernLightsCinema/html/newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href=".html/giftCard.html">
+          <a href="/LuleNorthernLightsCinema/html/giftCard.html">
             <li>Köp presentkort</li>
           </a>
         </ul>
@@ -136,8 +136,8 @@
     <script src="./js/script.js"></script>
 
     <script type="module">
-      import renderSecNav from "/js/secNav/secNav.js"
-      renderSecNav("./html/"); // Pass along folderDir as an argument to inform where the secNav .html-files are located
+      import renderSecNav from "/LuleNorthernLightsCinema/js/secNav/secNav.js"
+      renderSecNav(); // Pass along folderDir as an argument to inform where the secNav .html-files are located
     </script>
   </body>
 </html>
