--- a/index.html
+++ b/index.html
@@ -14,33 +14,32 @@
         <a href="index.html">
           <img
             class="logotype"
-            src="/LuleNorthernLightsCinema/static/logo-cinema.png"
+            src="./static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="/LuleNorthernLightsCinema/static/hamburger-icon.svg"
+          src="./static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
-
       <nav>
         <ul class="main-nav">
-          <a href="/LuleNorthernLightsCinema/html/openingHours.html">
+          <a href="./Html/openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="/LuleNorthernLightsCinema/html/about.html">
+          <a href="./Html/about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="/LuleNorthernLightsCinema/html/ticket-info.html">
+          <a href="./Html/ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="/LuleNorthernLightsCinema/html/newsletter.html">
+          <a href="./Html/newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="/LuleNorthernLightsCinema/html/giftCard.html">
+          <a href="./Html/giftCard.html">
             <li>Köp presentkort</li>
           </a>
         </ul>
@@ -51,32 +50,32 @@
          js/secNav/anchors.js
     -->
     <nav class="secNav">
-        <menu class="secNav-menu">
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="rep">Repertoar</button>
-                <div class="secNav-dropdown" id="rep-dropdown"></div>
-            </li>
+      <menu class="secNav-menu">
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="rep">Repertoar</button>
+          <div class="secNav-dropdown" id="rep-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="sal">Salonger</button>
-                <div class="secNav-dropdown" id="sal-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="sal">Salonger</button>
+          <div class="secNav-dropdown" id="sal-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="spec">Specialvisningar</button>
-                <div class="secNav-dropdown" id="spec-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="spec">Specialvisningar</button>
+          <div class="secNav-dropdown" id="spec-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="live">Live på bio</button>
-                <div class="secNav-dropdown" id="live-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="live">Live på bio</button>
+          <div class="secNav-dropdown" id="live-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="barBist">Bar & Bistro</button>
-                <div class="secNav-dropdown" id="barBist-dropdown"></div>
-            </li>
-        </menu>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="barBist">Bar & Bistro</button>
+          <div class="secNav-dropdown" id="barBist-dropdown"></div>
+        </li>
+      </menu>
     </nav>
 
     <div class="picture-container"></div>
@@ -136,7 +135,7 @@
     <script src="./js/script.js"></script>
 
     <script type="module">
-      import renderSecNav from "/LuleNorthernLightsCinema/js/secNav/secNav.js"
+      import renderSecNav from "/LuleNorthernLightsCinema/js/secNav/secNav.js";
       renderSecNav(); // Pass along folderDir as an argument to inform where the secNav .html-files are located
     </script>
   </body>
