--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           <a href="./Html/ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="./Html/newsletter.html">
+          <a href="/Html/newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="./Html/giftCard.html">
+          <a href="/Html/giftCard.html">
             <li>Köp presentkort</li>
           </a>
         </ul>
