--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -11,64 +11,37 @@
   <body>
     <header class="header">
       <div class="top-header">
-        <a href="../index.html">
+        <a href="index.html">
           <img
             class="logotype"
-            src="/static/logo-cinema.png"
+            src="./static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="../static/hamburger-icon.svg"
+          src="./static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
-
       <nav>
         <ul class="main-nav">
-          <a href="openingHours.html">
+          <a href="./Html/openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="about.html">
+          <a href="./Html/about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="ticket-info.html">
+          <a href="./Html/ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="newsletter.html">
+          <a href="/Html/newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="giftCard.html">
+          <a href="/Html/giftCard.html">
             <li>Köp presentkort</li>
           </a>
-          <section>
-            <a href="#">
-              <img
-                class="social-media-links"
-                src="/static/facebook.svg"
-                alt="facebook icon"
-            /></a>
-            <a href="#">
-              <img
-                class="social-media-links"
-                src="/static/instagram.svg"
-                alt="instagram icon"
-            /></a>
-            <a href="#">
-              <img
-                class="social-media-links"
-                src="/static/twitter.svg"
-                alt="twitter icon"
-            /></a>
-            <a href="#">
-              <img
-                class="social-media-links"
-                src="/static/mail.svg"
-                alt="mail icon"
-            /></a>
-          </section>
         </ul>
       </nav>
     </header>
@@ -194,10 +167,8 @@
     </footer>
 
     <script type="module">
-        import renderSecNav from "../js/secNav/secNav.js"
-        renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
-      </script>
-      
-</body>
-
+      import renderSecNav from "../js/secNav/secNav.js";
+      renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
+    </script>
+  </body>
 </html>
