--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -27,19 +27,19 @@
       </div>
       <nav>
         <ul class="main-nav">
-          <a href="./Html/openingHours.html">
+          <a href="openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="./Html/about.html">
+          <a href="about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="./Html/ticket-info.html">
+          <a href="ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="./Html/newsletter.html">
+          <a href="newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="./Html/giftCard.html">
+          <a href="giftCard.html">
             <li>Köp presentkort</li>
           </a>
         </ul>
