--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <div class="top-header">
-        <a href="index.html">
+        <a href="../index.html">
           <img
             class="logotype"
             src="./static/logo-cinema.png"
@@ -36,10 +36,10 @@
           <a href="ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="newsletter.html">
+          <a href="/Html/newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="giftCard.html">
+          <a href="./giftCard.html">
             <li>Köp presentkort</li>
           </a>
         </ul>
