--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -14,14 +14,14 @@
         <a href="../index.html">
           <img
             class="logotype"
-            src="./static/logo-cinema.png"
+            src="../static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="./static/hamburger-icon.svg"
+          src="/static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
