--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -21,7 +21,7 @@
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="/static/hamburger-icon.svg"
+          src="static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
