--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -21,7 +21,7 @@
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="static/hamburger-icon.svg"
+          src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
@@ -36,10 +36,10 @@
           <a href="ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="/Html/newsletter.html">
+          <a href="newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="./giftCard.html">
+          <a href="giftCard.html">
             <li>Köp presentkort</li>
           </a>
         </ul>
