test with removed html folder

--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
         <a href="index.html">
           <img
             class="logotype"
-            src="./static/logo-cinema.png"
+            src="static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="./static/hamburger-icon.svg"
+          src="static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
       <nav>
         <ul class="main-nav">
-          <a href="./Html/openingHours.html">
+          <a href="openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="./Html/about.html">
+          <a href="about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="./Html/ticket-info.html">
+          <a href="ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="/LuleNorthernLightsCinema/html/newsletter.html">
+          <a href="newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="/LuleNorthernLightsCinema/html/giftCard.html">
+          <a href="giftCard.html">
             <li>Köp presentkort</li>
           </a>
         </ul>
