--- a/openingHours.html
+++ b/openingHours.html
@@ -11,17 +11,17 @@
   <body>
     <header class="header">
       <div class="top-header">
-        <a href="../index.html">
+        <a href="index.html">
           <img
             class="logotype"
-            src="../static/logo-cinema.png"
+            src="static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="../static/hamburger-icon.svg"
+          src="static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
