--- a/bistro-menu.html
+++ b/bistro-menu.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/static/main.css" />
+    <link rel="stylesheet" href="static/main.css" />
     <title>LuleNorthernLightsCinema</title>
   </head>
 
   <body>
     <header class="header">
       <div class="top-header">
-        <a href="/index.html">
+        <a href="index.html">
           <img
             class="logotype"
-            src="/static/logo-cinema.png"
+            src="static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           id="hamburger-icon"
-          src="../static/hamburger-icon.svg"
+          src="static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
@@ -49,82 +49,79 @@
     <!-- Lägg in href-länkar för secNav i följande .js-fil:
         js/secNav/anchors.js -->
     <nav class="secNav">
-        <menu class="secNav-menu">
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="rep">Repertoar</button>
-                <div class="secNav-dropdown" id="rep-dropdown"></div>
-            </li>
+      <menu class="secNav-menu">
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="rep">Repertoar</button>
+          <div class="secNav-dropdown" id="rep-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="sal">Salonger</button>
-                <div class="secNav-dropdown" id="sal-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="sal">Salonger</button>
+          <div class="secNav-dropdown" id="sal-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="spec">Specialvisningar</button>
-                <div class="secNav-dropdown" id="spec-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="spec">Specialvisningar</button>
+          <div class="secNav-dropdown" id="spec-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="live">Live på bio</button>
-                <div class="secNav-dropdown" id="live-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="live">Live på bio</button>
+          <div class="secNav-dropdown" id="live-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="barBist">Bar & Bistro</button>
-                <div class="secNav-dropdown" id="barBist-dropdown"></div>
-            </li>
-        </menu>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="barBist">Bar & Bistro</button>
+          <div class="secNav-dropdown" id="barBist-dropdown"></div>
+        </li>
+      </menu>
     </nav>
 
-        <section class="fnb fnb-food-header">
-            <h2>Välkommen till Northen Lights Bistro & Bar</h2>
-            <p>
-                Hos oss kan du njuta av ett modernt och rustikt nordiskt kök.
-                Menyn kombineras med dryckesförslag av vår sommelier Sten Bumling 
-                och kan avnjutas såväl i vår stora foajé som i någon av våra tre 
-                biosalonger.
-            </p>
-            
-            <a href="mailto:">
-                Boka Bord
-            </a>
-        </section>
-        <section class="fnb fnb-food-alacarte">
-            <h2>A la carte meny</h2>
-            <em>
-                Vi serverar vår à la carte meny från klockan 
-                16.30 i bistron, salong Bar Deco och Camera.
-            </em>
-            <ul>
-                <li>Rätt 1</li>
-                <li>Rätt 2<em class="food-diet-vegan">Vegansk</em></li>
-                <li>Rätt 3</li>
-                <li>Rätt 4</li>
-                <li>Rätt 5</li>
-            </ul>
-        </section>
-        <section class="fnb fnb-food-special">
-            <h2>Kökets special</h2>
-            <p>
-                Vecka 50-51: Lättrökt svensk ostronskivling med 
-                julkryddade gulbetor och stuvad grönkål.
-            </p>
-        </section>
-        <section class="fnb fnb-food-bistro">
-            <h2>Bistromeny</h2>
-            <em>
-                Vi erbjuder vår bistromeny hela dagen i alla våra tre salonger.
-            </em>
-            <ul>
-                <li>Rätt 1<em class="fnb food-diet-vegan">Vegansk</em></li>
-                <li>Rätt 2</li>
-                <li>Rätt 3</li>
-                <li>Rätt 4</li>
-                <li>Rätt 5</li>
-            </ul>
-            <a class="fnb fnb-book-a-table" href="mailto:">Boka bord via info@northernlight.se</a>
-        </section>    
+    <section class="fnb fnb-food-header">
+      <h2>Välkommen till Northen Lights Bistro & Bar</h2>
+      <p>
+        Hos oss kan du njuta av ett modernt och rustikt nordiskt kök. Menyn
+        kombineras med dryckesförslag av vår sommelier Sten Bumling och kan
+        avnjutas såväl i vår stora foajé som i någon av våra tre biosalonger.
+      </p>
+
+      <a href="mailto:"> Boka Bord </a>
+    </section>
+    <section class="fnb fnb-food-alacarte">
+      <h2>A la carte meny</h2>
+      <em>
+        Vi serverar vår à la carte meny från klockan 16.30 i bistron, salong Bar
+        Deco och Camera.
+      </em>
+      <ul>
+        <li>Rätt 1</li>
+        <li>Rätt 2<em class="food-diet-vegan">Vegansk</em></li>
+        <li>Rätt 3</li>
+        <li>Rätt 4</li>
+        <li>Rätt 5</li>
+      </ul>
+    </section>
+    <section class="fnb fnb-food-special">
+      <h2>Kökets special</h2>
+      <p>
+        Vecka 50-51: Lättrökt svensk ostronskivling med julkryddade gulbetor och
+        stuvad grönkål.
+      </p>
+    </section>
+    <section class="fnb fnb-food-bistro">
+      <h2>Bistromeny</h2>
+      <em> Vi erbjuder vår bistromeny hela dagen i alla våra tre salonger. </em>
+      <ul>
+        <li>Rätt 1<em class="fnb food-diet-vegan">Vegansk</em></li>
+        <li>Rätt 2</li>
+        <li>Rätt 3</li>
+        <li>Rätt 4</li>
+        <li>Rätt 5</li>
+      </ul>
+      <a class="fnb fnb-book-a-table" href="mailto:"
+        >Boka bord via info@northernlight.se</a
+      >
+    </section>
     <footer class="footer">
       <div class="footer-sections">
         <h3>Lule Northern Lights Cinema</h3>
@@ -136,26 +133,23 @@
         <a href="#">
           <img
             class="social-media-links"
-            src="/static/facebook.svg"
+            src="static/facebook.svg"
             alt="facebook icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="/static/instagram.svg"
+            src="static/instagram.svg"
             alt="instagram icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="/static/twitter.svg"
+            src="static/twitter.svg"
             alt="twitter icon"
         /></a>
         <a href="mailto:">
-          <img 
-            class="social-media-links"
-            src="/static/mail.svg" 
-            alt="mail icon"
+          <img class="social-media-links" src="static/mail.svg" alt="mail icon"
         /></a>
         <p>Telefon: 010-7308579</p>
       </div>
@@ -163,19 +157,19 @@
         <h3>Samarbete med</h3>
         <img
           id="municipality-logo"
-          src="/static/kommun-logo.svg"
+          src="static/kommun-logo.svg"
           alt="municipality for our city"
         />
         <img
           id="cinema-collab"
-          src="/static/europa-cinemas.png"
+          src="static/europa-cinemas.png"
           alt="cinema collab"
         />
       </div>
     </footer>
 
     <script type="module">
-      import renderSecNav from "../js/secNav/secNav.js"
+      import renderSecNav from "../js/secNav/secNav.js";
       renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
     </script>
   </body>
