--- a/ticket-info.html
+++ b/ticket-info.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/main.css" />
+    <link rel="stylesheet" href="static/main.css" />
     <title>LuleNorthernLightsCinema</title>
   </head>
 
   <body>
     <header class="header">
       <div class="top-header">
-        <a href="/index.html">
+        <a href="index.html">
           <img
             class="logotype"
-            src="/static/logo-cinema.png"
+            src="static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           onclick="hamburger()"
           id="hamburger-icon"
-          src="../static/hamburger-icon.svg"
+          src="static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
@@ -47,25 +47,25 @@
             <a href="#">
               <img
                 class="social-media-links"
-                src="/static/facebook.svg"
+                src="static/facebook.svg"
                 alt="facebook icon"
             /></a>
             <a href="#">
               <img
                 class="social-media-links"
-                src="/static/instagram.svg"
+                src="static/instagram.svg"
                 alt="instagram icon"
             /></a>
             <a href="#">
               <img
                 class="social-media-links"
-                src="/static/twitter.svg"
+                src="static/twitter.svg"
                 alt="twitter icon"
             /></a>
             <a href="#">
               <img
                 class="social-media-links"
-                src="/static/mail.svg"
+                src="static/mail.svg"
                 alt="mail icon"
             /></a>
           </section>
@@ -156,7 +156,7 @@
           Bytet görs endast på biografen 72 timmar innan filmen börjar.
         </p>
 
-        <img src="/static/faq.jpeg" alt="" />
+        <img src="static/faq.jpeg" alt="" />
       </section>
 
       <section name="additional-info">
@@ -187,7 +187,7 @@
           frukostbio. Saknas det visningar inom genren går det inte att byta.
           Bytet görs endast på biografen 72 timmar innan filmen börjar.
         </p>
-        <img src="/static/cinemafood.jpg" alt="" />
+        <img src="static/cinemafood.jpg" alt="" />
       </section>
     </main>
 
@@ -202,26 +202,23 @@
         <a href="#">
           <img
             class="social-media-links"
-            src="/static/facebook.svg"
+            src="static/facebook.svg"
             alt="facebook icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="/static/instagram.svg"
+            src="static/instagram.svg"
             alt="instagram icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="/static/twitter.svg"
+            src="static/twitter.svg"
             alt="twitter icon"
         /></a>
         <a href="mailto:">
-          <img
-            class="social-media-links"
-            src="/static/mail.svg"
-            alt="mail icon"
+          <img class="social-media-links" src="static/mail.svg" alt="mail icon"
         /></a>
         <p>Telefon: 010-7308579</p>
       </div>
@@ -229,21 +226,20 @@
         <h3>Samarbete med</h3>
         <img
           id="municipality-logo"
-          src="/static/kommun-logo.svg"
+          src="static/kommun-logo.svg"
           alt="municipality for our city"
         />
         <img
           id="cinema-collab"
-          src="/static/europa-cinemas.png"
+          src="static/europa-cinemas.png"
           alt="cinema collab"
         />
       </div>
     </footer>
 
     <script type="module">
-      import renderSecNav from "../js/secNav/secNav.js"
+      import renderSecNav from "../js/secNav/secNav.js";
       renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
     </script>
-    
   </body>
 </html>
