--- a/upcoming.html
+++ b/upcoming.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/main.css" />
+    <link rel="stylesheet" href="static/main.css" />
     <title>LuleNorthernLightsCinema</title>
 </head>
 
@@ -13,10 +13,10 @@
     <header class="header">
         <div class="top-header">
             <!--  Make a good looking logotype later -->
-            <a href="../index.html">
-                <img class="logotype" src="../static/logga.jpg" alt="logotype for the cinema" /></a>
+            <a href="index.html">
+                <img class="logotype" src="/static/logo-cinema.png" alt="logotype for the cinema" /></a>
             <h1>Lule Northern Lights Cinema</h1>
-            <img id="hamburger-icon" src="../static/hamburger-icon.svg" alt="hamburger-icon" />
+            <img id="hamburger-icon" src="static/hamburger-icon.svg" alt="hamburger-icon" />
         </div>
 
         <nav>
@@ -109,19 +109,19 @@
         <div class="footer-sections">
             <h3>Kontakta oss</h3>
             <a href="#">
-                <img class="social-media-links" src="../static/facebook.svg" alt="facebook icon" /></a>
+                <img class="social-media-links" src="static/facebook.svg" alt="facebook icon" /></a>
             <a href="#">
-                <img class="social-media-links" src="../static/instagram.svg" alt="instagram icon" /></a>
+                <img class="social-media-links" src="static/instagram.svg" alt="instagram icon" /></a>
             <a href="#">
-                <img class="social-media-links" src="../static/twitter.svg" alt="twitter icon" /></a>
+                <img class="social-media-links" src="static/twitter.svg" alt="twitter icon" /></a>
             <a href="mailto:">
-                <img class="social-media-links" src="../static/mail.svg" alt="mail icon" /></a>
+                <img class="social-media-links" src="static/mail.svg" alt="mail icon" /></a>
             <p>Telefon: 010-7308579</p>
         </div>
         <div class="footer-sections">
             <h3>Samarbete med</h3>
-            <img id="municipality-logo" src="../static/kommun-logo.svg" alt="municipality for our city" />
-            <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
+            <img id="municipality-logo" src="static/kommun-logo.svg" alt="municipality for our city" />
+            <img id="cinema-collab" src="static/europa-cinemas.png" alt="cinema collab" />
         </div>
     </footer>
 
