--- a/wholeProgramPage.html
+++ b/wholeProgramPage.html
@@ -4,43 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/main.css" />
+    <link rel="stylesheet" href="static/main.css" />
     <title>LuleNorthernLightsCinema</title>
   </head>
 
   <body>
     <header class="header">
       <div class="top-header">
-        
-        <a href="/index.html">
+        <a href="index.html">
           <img
             class="logotype"
-            src="../static/logo-cinema.png"
+            src="static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
-        <img onclick="hamburger()"
+        <img
+          onclick="hamburger()"
           id="hamburger-icon"
-          src="../static/hamburger-icon.svg"
+          src="static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
 
       <nav>
         <ul class="main-nav">
-          <a href="/html/openingHours.html">
+          <a href="openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="/html/about.html">
+          <a href="about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="/html/ticket-info.html">
+          <a href="ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="/html/newsletter.html">
+          <a href="newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="/html/giftCard.html">
+          <a href="giftCard.html">
             <li>Köp presentkort</li>
           </a>
 
@@ -48,25 +48,25 @@
             <a href="#">
               <img
                 class="social-media-links"
-                src="/static/facebook.svg"
+                src="static/facebook.svg"
                 alt="facebook icon"
             /></a>
             <a href="#">
               <img
                 class="social-media-links"
-                src="/static/instagram.svg"
+                src="static/instagram.svg"
                 alt="instagram icon"
             /></a>
             <a href="#">
               <img
                 class="social-media-links"
-                src="/static/twitter.svg"
+                src="static/twitter.svg"
                 alt="twitter icon"
             /></a>
             <a href="mailto:">
               <img
                 class="social-media-links"
-                src="/static/mail.svg"
+                src="static/mail.svg"
                 alt="mail icon"
             /></a>
           </section>
@@ -108,7 +108,6 @@
     <main>
       <ul id="ul"></ul>
     </main>
-   
 
     <footer class="footer">
       <div class="footer-sections">
@@ -121,26 +120,23 @@
         <a href="#">
           <img
             class="social-media-links"
-            src="../static/facebook.svg"
+            src="static/facebook.svg"
             alt="facebook icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="../static/instagram.svg"
+            src="static/instagram.svg"
             alt="instagram icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="../static/twitter.svg"
+            src="static/twitter.svg"
             alt="twitter icon"
         /></a>
         <a href="mailto:">
-          <img
-            class="social-media-links"
-            src="../static/mail.svg"
-            alt="mail icon"
+          <img class="social-media-links" src="static/mail.svg" alt="mail icon"
         /></a>
         <p>Telefon: 010-7308579</p>
       </div>
@@ -148,24 +144,22 @@
         <h3>Samarbete med</h3>
         <img
           id="municipality-logo"
-          src="../static/kommun-logo.svg"
+          src="static/kommun-logo.svg"
           alt="municipality for our city"
         />
         <img
           id="cinema-collab"
-          src="../static/europa-cinemas.png"
+          src="static/europa-cinemas.png"
           alt="cinema collab"
         />
       </div>
     </footer>
     <script src="/js/script.js"></script>
     <script src="../js/movieRows.js" type="module"></script>
-    
+
     <script type="module">
-        import renderSecNav from "../js/secNav/secNav.js"
-        renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
-      </script>
-
-</body>
-
+      import renderSecNav from "../js/secNav/secNav.js";
+      renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
+    </script>
+  </body>
 </html>
