--- a/booking.html
+++ b/booking.html
@@ -161,7 +161,7 @@
     </footer>
 
     <script src="../js/booking/booking.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 
     <script type="module">
       import renderSecNav from "../js/secNav/secNav.js"
