--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </footer>
     <script type="text/javascript" src="/src/movies.json"></script>
 
-    <script src="./js/script.js"></script>
+    <script src="js/script.js"></script>
 
     <script type="module">
       import renderSecNav from "/LuleNorthernLightsCinema/js/secNav/secNav.js";
