--- a/openingHours.html
+++ b/openingHours.html
@@ -162,7 +162,7 @@
         />
       </div>
     </footer>
-
+    <script src="js/script.js"></script>
     <script type="module">
       import renderSecNav from "../js/secNav/secNav.js";
       renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
