--- a/upcoming.html
+++ b/upcoming.html
@@ -124,7 +124,7 @@
             <img id="cinema-collab" src="static/europa-cinemas.png" alt="cinema collab" />
         </div>
     </footer>
-
+    <script src="js/script.js"></script>
     <script src="../js/secNav/secNav.js" type="module"></script>
 </body>
 
