--- a/wholeProgramPage.html
+++ b/wholeProgramPage.html
@@ -154,7 +154,7 @@
         />
       </div>
     </footer>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     <script src="../js/movieRows.js" type="module"></script>
 
     <script type="module">
