--- a/wholeProgramPage.html
+++ b/wholeProgramPage.html
@@ -155,10 +155,10 @@
       </div>
     </footer>
     <script src="js/script.js"></script>
-    <script src="../js/movieRows.js" type="module"></script>
+    <script src="js/movieRows.js" type="module"></script>
 
     <script type="module">
-      import renderSecNav from "../js/secNav/secNav.js";
+      import renderSecNav from "js/secNav/secNav.js";
       renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
     </script>
   </body>
