--- a/bistro-menu.html
+++ b/bistro-menu.html
@@ -169,7 +169,7 @@
     </footer>
     <script src="js/script.js"></script>
     <script type="module">
-      import renderSecNav from "../js/secNav/secNav.js";
+      import renderSecNav from "js/secNav/secNav.js";
       renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
     </script>
   </body>
