--- a/booking.html
+++ b/booking.html
@@ -160,7 +160,7 @@
       </div>
     </footer>
 
-    <script src="../js/booking/booking.js"></script>
+    <script src="js/booking/booking.js"></script>
     <script src="js/script.js"></script>
 
     <script type="module">
