--- a/openingHours.html
+++ b/openingHours.html
@@ -165,7 +165,7 @@
     <script src="js/script.js"></script>
     <script type="module">
       import renderSecNav from "js/secNav/secNav.js";
-      renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
+      renderSecNav("openinghours.html"); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
     </script>
   </body>
 </html>
