--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <script type="module">
       import renderSecNav from "js/secNav/secNav.js";
-      renderSecNav(); // Pass along folderDir as an argument to inform where the secNav .html-files are located
+      renderSecNav("index.html"); // Pass along folderDir as an argument to inform where the secNav .html-files are located
     </script>
   </body>
 </html>
