Co-authored-by: Robin kron <Rkron91@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
       </div>
       <nav>
         <ul class="main-nav">
-          <a href="openingHours.html">
+          <a href="pages/openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="about.html">
+          <a href="pages/about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="ticket-info.html">
+          <a href="pages/ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="newsletter.html">
+          <a href="pages/newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="giftCard.html">
+          <a href="pages/giftCard.html">
             <li>Köp presentkort</li>
           </a>
           <section>
