Change links for html main-nav

--- a/pages/openingHours.html
+++ b/pages/openingHours.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <div class="top-header">
-        <a href="../index.html">../
+        <a href="../index.html">
           <img
             class="logotype"
             src="../static/logo-cinema.png"
@@ -27,19 +27,19 @@
       </div>
       <nav>
         <ul class="main-nav">
-          <a href="../openingHours.html">
+          <a href="openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="../about.html">
+          <a href="about.html">
             <li>Om våran biograf</li>
           </a>
-          <a href="../ticket-info.html">
+          <a href="ticket-info.html">
             <li>Biljettinfo</li>
           </a>
-          <a href="../newsletter.html">
+          <a href="newsletter.html">
             <li>Nyheter</li>
           </a>
-          <a href="../giftCard.html">
+          <a href="giftCard.html">
             <li>Köp presentkort</li>
           </a>
           <section>
