Change hrefs on all html.files

--- a/pages/openingHours.html
+++ b/pages/openingHours.html
@@ -189,9 +189,6 @@
       </div>
     </footer>
     <script src="../js/script.js"></script>
-    <script type="module">
-      import renderSecNav from "js/secNav/secNav.js";
-      renderSecNav("openinghours.html"); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
-    </script>
+    <script src="../js/secNav/secNav.js" type="module"></script>
   </body>
 </html>
