--- a/index.html
+++ b/index.html
@@ -158,6 +158,6 @@
     </footer>
 
     <script src="js/script.js"></script>
-    <script src="js/secNav/secNav.js"></script>
+    <script src="js/secNav/secNav.js" type="module"></script>
   </body>
 </html>
