Broken link on image and missing link to page

--- a/pages/giftCard.html
+++ b/pages/giftCard.html
@@ -118,8 +118,8 @@
       <p>
         Lule Northern Lights Cinema ligger på biografgatan 97 i Luleå där du kan
         köpa vårt presentkort i kassan. Läs mer om våra
-        <a href="#">öppettider</a>.
-      </p>
+        <a href="openingHours.html">öppettider</a>.
+      </p>  
 
       <h3>Köp presentkort via företaget</h3>
       <p>
@@ -130,7 +130,7 @@
       </p>
       <p>
         <img
-          src="static/giftcard.png"
+          src="../static/giftcard.png"
           alt="Bild på en biosalong med röda stolar i bakgrunden och i förgrunden är det ett glas vin, en stor bulle och ett presentkort ovanpå ett bord. Belysnigen i rummet är dämpad."
           width="300"
           height="300"
