--- a/html/about.html
+++ b/html/about.html
@@ -134,8 +134,9 @@
             <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
         </div>
     </footer>
-    <script src="../js/script.js"></script>
+    <!--     <script src="../js/script.js"></script>
     <script src="../js/secNav/secNav.js" type="module"></script>
+ -->
 </body>
 
 </html>
