--- a/html/openingHours.html
+++ b/html/openingHours.html
@@ -49,7 +49,7 @@
     </header>
 
     <!-- Lägg in href-länkar för secNav i följande .js-fil:
-         js/secNav/anchors.js -->
+        js/secNav/anchors.js -->
     <nav class="secNav">
         <menu class="secNav-menu">
             <li class="secNav-menu-item">
@@ -78,18 +78,45 @@
             </li>
         </menu>
     </nav>
-    <section class="pageHeader">
-        <h2>Nyhetsbrev</h2>
-    </section>
-    <main class="content">
-        <p>
-            Vill du ha koll på vad som händer hos oss, premiärer, specialvisningar och biljettsläpp. Varannan vecka skickar vi ut ett nyhetsprev späckat med filmnyheter!
-        </p>
-        <p>
-            <a href="#">Självklart vill jag prenumerera på nyhetsbrevet!!</a>
-        </p>
-        <img src="../static/newsletter.png" alt="Exempel nyhetsbrev" width="300" height="453" />
-        <p>Exemplet är från vecka 40.</p>
+
+    <main>
+        <section class="opening-contact">
+            <h1 class="openingHour-main-title">Öppetider och Kontakt</h1>
+            <h2 class="sec-title">Våra Öppetider</h2>
+            <ul class="opening-hours">
+                <li>Måndag: 10.00-21.00</li>
+                <br />
+                <li>Tisdag: 10.00-21.00</li>
+                <br />
+                <li>Onsdag: 10.00-21.00</li>
+                <br />
+                <li>Torsdag: 10.00-21.00</li>
+                <br />
+                <li>Fredag: 10.00-23.00</li>
+                <br />
+                <li>Lördag: 10.00-23.00</li>
+                <br />
+                <li>Söndag: 10.00-20.00</li>
+                <br />
+                <li class="avikande">
+                    Avikande öppettider: Röda dagar: 11.00 - 22.00
+                </li>
+            </ul>
+            <br />
+            <br />
+            <h2 class="contact-us">Kontakta oss</h2>
+            <ul class="contact-info">
+                <li>Telefonnummer: 010-7308579</li>
+                <li>E-mail: <u>info@lnlcinema.com</u></li>
+                <li>Support öppettider: Måndag - Fredag: 09.00 - 17</li>
+            </ul>
+
+            <h2 class="hyra">Vi hyr ut!</h2>
+            <p class="hyr-oss">
+                Våra salonger går även att hyra ut! <br />Kontakta oss via
+                <u>boka@lnlcinema.com</u>
+            </p>
+        </section>
     </main>
 
     <footer class="footer">
@@ -116,8 +143,9 @@
             <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
         </div>
     </footer>
-    <script src="../js/script.js"></script>
-    <script src="../js/secNav/secNav.js" type="module"></script>
+    <!--     <script src="../js/script.js"></script>
+ -->
+    <!--     <script src="../js/secNav/secNav.js" type="module"></script> -->
 </body>
 
 </html>
