--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -49,8 +49,7 @@
     </header>
 
     <!-- Lägg in href-länkar för secNav i följande .js-fil:
-         js/secNav/anchors.js
-    -->
+         js/secNav/anchors.js -->
     <nav class="secNav">
         <menu class="secNav-menu">
             <li class="secNav-menu-item">
@@ -80,49 +79,29 @@
         </menu>
     </nav>
     <section class="pageHeader">
-        <h2>Presentkort</h2>
+        <h2>Nyhetsbrev</h2>
     </section>
     <main class="content">
         <p>
-            En fin gåva till alla filmälskare som vill sätta guldkant på biobesöket. Presentkortet gäller hela bioprogrammet samt mat och dryck. Du väljer beloppet och kortet är därefter giltigt i ett år. Läs hur du betalar med presentkortet på hemsidan under
-            <a href="ticket-info.html">Biljettinfo</a>.
+            Vill du ha koll på vad som händer hos oss, premiärer, specialvisningar och biljettsläpp. Varannan vecka skickar vi ut ett nyhetsprev späckat med filmnyheter!
         </p>
-        <h3>Köp presentkort på plats</h3>
         <p>
-            Lule Northern Lights Cinema ligger på biografgatan 97 i Luleå där du kan köpa vårt presentkort i kassan. Läs mer om våra
-            <a href="openingHours.html">öppettider</a>.
+            <a href="#">Självklart vill jag prenumerera på nyhetsbrevet!!</a>
         </p>
-
-        <h3>Köp presentkort via företaget</h3>
-        <p>
-            Vill du köpa presentkort via företaget kan du mejla din beställning till
-            <a href="mailto:info@lulenorthernlightscinema.se">info@lulenorthernlightscinema.se</a
-        >. Glöm inte att bifoga företagets fakturauppgifter i mejlet.
-      </p>
-      <p>
-        <img
-          src="../static/giftcard.png"
-          alt="Bild på en biosalong med röda stolar i bakgrunden och i förgrunden är det ett glas vin, en stor bulle och ett presentkort ovanpå ett bord. Belysnigen i rummet är dämpad."
-          width="300"
-          height="300"
-        />
-      </p>
+        <img src="../static/newsletter.png" alt="Exempel nyhetsbrev" width="300" height="453" />
+        <p>Exemplet är från vecka 40.</p>
     </main>
 
     <footer class="footer">
-      <div class="footer-sections">
-        <h3>Lule Northern Lights Cinema</h3>
-        <p>biografgatan 97</p>
-        <p>97231 Luleå</p>
-      </div>
-      <div class="footer-sections">
-        <h3>Kontakta oss</h3>
-        <a href="#">
-          <img
-            class="social-media-links"
-            src="../static/facebook.svg"
-            alt="facebook icon"
-        /></a>
+        <div class="footer-sections">
+            <h3>Lule Northern Lights Cinema</h3>
+            <p>biografgatan 97</p>
+            <p>97231 Luleå</p>
+        </div>
+        <div class="footer-sections">
+            <h3>Kontakta oss</h3>
+            <a href="#">
+                <img class="social-media-links" src="../static/facebook.svg" alt="facebook icon" /></a>
             <a href="#">
                 <img class="social-media-links" src="../static/instagram.svg" alt="instagram icon" /></a>
             <a href="#">
@@ -130,15 +109,17 @@
             <a href="mailto:">
                 <img class="social-media-links" src="../static/mail.svg" alt="mail icon" /></a>
             <p>Telefon: 010-7308579</p>
-            </div>
-            <div class="footer-sections">
-                <h3>Samarbete med</h3>
-                <img id="municipality-logo" src="../static/kommun-logo.svg" alt="municipality for our city" />
-                <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
-            </div>
-            </footer>
-            <script src="../js/script.js"></script>
-            <script src="../js/secNav/secNav.js" type="module"></script>
+        </div>
+        <div class="footer-sections">
+            <h3>Samarbete med</h3>
+            <img id="municipality-logo" src="../static/kommun-logo.svg" alt="municipality for our city" />
+            <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
+        </div>
+    </footer>
+    <!--     <script src="../js/script.js"></script>
+ -->
+    <!--     <script src="../js/secNav/secNav.js" type="module"></script>
+ -->
 </body>
 
 </html>
